--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,38 +1,83 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-image: url('https://t4.ftcdn.net/jpg/00/59/95/89/360_F_59958917_1SvEPqvKnrGr68THJ35hqQUiHwQ6WhCN.jpg');
+  background-size: cover;
+  background-position: center;
+  color: white;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h1 {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 0; /* Remove margin-top to bring "About" and "Contact" closer */
+}
+
+.header-left,
+.header-right {
+  position: relative;
+  cursor: pointer;
+  color: white; /* Change text color to white */
+  font-size: calc(8px + 2vmin);
+}
+
+.sections {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: 80vh;
+}
+
+.section {
+  position: relative;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  padding: 20px;
+}
+
+.section p {
+  margin: 0;
+  z-index: 1;
+  font-size: 1em;
+  color: white; /* Change text color to white */
+}
+
+.section:hover {
+  background-color: rgba(40, 44, 52, 0.8);
+}
+
+.section-gif {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.section:hover .section-gif {
+  opacity: 1;
 }
