--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,39 +3,39 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: url('https://t4.ftcdn.net/jpg/00/59/95/89/360_F_59958917_1SvEPqvKnrGr68THJ35hqQUiHwQ6WhCN.jpg');
-  background-size: cover;
-  background-position: center;
-  color: white;
+  color: black;
 }
 
-.App-header {
-  min-height: 10vh;
+.my-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  position: relative;
+  font-family: Arial, sans-serif;
+  padding: 10px;
+  width: fit-content;
+  margin: auto;
 }
 
-.App-header h1 {
+.my-header h1 {
   margin: 0;
+  font-size: 24px;
 }
 
-.header-container {
+nav {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 0; /* Remove margin-top to bring "About" and "Contact" closer */
+  justify-content: space-between;
+  margin-top: 5px;
 }
 
-.header-left,
-.header-right {
-  position: relative;
-  cursor: pointer;
-  color: white; /* Change text color to white */
-  font-size: calc(8px + 2vmin);
+nav a {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+nav a:hover {
+  text-decoration: underline;
 }
 
 .sections {
@@ -59,7 +59,7 @@
   margin: 0;
   z-index: 1;
   font-size: 1em;
-  color: white; /* Change text color to white */
+  color: black; /* Ensure text color is black */
 }
 
 .section:hover {
