--- a/portfolio/src/components/Section.css
+++ b/portfolio/src/components/Section.css
@@ -1,23 +1,22 @@
 .section {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
     position: relative;
     transition: background-color 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: black;
+    padding: 20px;
   }
   
-  .section h2 {
+  .section p {
     margin: 0;
     z-index: 1;
-    color: #ffffff;
-    font-size: 1.5em;
+    font-size: 1em;
+    color: white; /* Ensure text color is white */
   }
   
   .section:hover {
-    background-color: rgba(40, 44, 52, 0.8); /* Adds a subtle background color change on hover */
+    background-color: rgba(40, 44, 52, 0.8);
   }
   
   .section-gif {
