--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   color: black;
+  margin: 0;
+  padding: 0;
 }
 
 .my-header {
@@ -11,9 +13,9 @@
   flex-direction: column;
   align-items: center;
   font-family: Arial, sans-serif;
-  padding: 10px;
+  padding: 10px 0 10px 0;
   width: fit-content;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .my-header h1 {
@@ -28,56 +30,39 @@ nav {
   margin-top: 5px;
 }
 
-nav a {
-  text-decoration: none;
-  color: black;
+nav .about,
+nav .contact {
+  cursor: pointer;
   font-size: 18px;
-}
-
-nav a:hover {
-  text-decoration: underline;
 }
 
 .sections {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  height: 80vh;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .section {
   position: relative;
-  transition: background-color 0.3s ease;
   display: flex;
   align-items: center;
   justify-content: center;
   color: black;
   padding: 20px;
+  transition: background-color 0.3s ease;
 }
 
-.section p {
-  margin: 0;
-  z-index: 1;
-  font-size: 1em;
-  color: black; /* Ensure text color is black */
-}
-
-.section:hover {
-  background-color: rgba(40, 44, 52, 0.8);
-}
-
-.section-gif {
-  position: absolute;
-  top: 0;
-  left: 0;
+.section img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
-  z-index: 0;
 }
 
-.section:hover .section-gif {
+.section.hovered img {
   opacity: 1;
 }
