--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -16,6 +16,7 @@
   padding: 10px 0 10px 0;
   width: fit-content;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .my-header h1 {
@@ -44,44 +45,4 @@ nav .contact {
   width: 100%;
   margin: 0;
   padding: 0;
-}
-
-.section {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  padding: 20px;
-  transition: background-color 0.3s ease;
-  box-sizing: border-box; /* Include padding and border in element's total width and height */
-}
-
-.section img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.section.hovered img {
-  opacity: 1;
-}
-
-.section p {
-  margin: 0;
-  z-index: 1;
-  font-size: 1em;
-  color: black;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.section.hovered p {
-  opacity: 1;
 }
