--- a/portfolio/src/components/Section.css
+++ b/portfolio/src/components/Section.css
@@ -9,17 +9,15 @@
     overflow: hidden;
   }
   
+  .section img,
   .section p {
-    margin: 0;
-    z-index: 1;
-    font-size: 1em;
-    color: black;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 0.5s ease-in-out;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  }
+  
+  .section img.show,
+  .section.show-text .fade-text.show {
+    opacity: 1;
   }
   
   .section img {
@@ -29,12 +27,17 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
     z-index: 0;
   }
   
-  .section:hover .section-gif {
-    opacity: 1;
+  .section p {
+    margin: 0;
+    z-index: 1;
+    font-size: 1em;
+    color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
