--- a/portfolio/src/components/Section.css
+++ b/portfolio/src/components/Section.css
@@ -1,6 +1,6 @@
 .section {
     position: relative;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, opacity 0.5s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,6 +18,11 @@
   .section img.show,
   .section.show-text .fade-text.show {
     opacity: 1;
+  }
+  
+  .section.flash img.show {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
   }
   
   .section img {
